#fix main nav z-index

--- a/assets/sass/components.subnav.scss
+++ b/assets/sass/components.subnav.scss
@@ -1,6 +1,6 @@
 .flx-subnav {
     position: absolute;
-    z-index: 999;
+    z-index: 500;
     top: $navbar-height;
     width: 100vw;
     height: $navbar-height;
