--- a/assets/sass/generic.overrides.scss
+++ b/assets/sass/generic.overrides.scss
@@ -15,7 +15,8 @@
 }
 
 .ovr-header {
-	position: absolute;
+    position: absolute;
+    box-shadow: none;
 }
 
 .ovr-header__content {
